*CVS*

* Fixed the Inflector to handle the movie/movies pair correctly #261 [Scott Baron]

* Added bind-style variable interpolation for the condition arrays that uses the adapter's quote method [Michael Koziarski]

  Before:
    find_first([ "user_name = '%s' AND password = '%s'", user_name, password ])]
    find_first([ "firm_id = %s", firm_id ])] # unsafe!

  After:
    find_first([ "user_name = ? AND password = ?", user_name, password ])]
    find_first([ "firm_id = ?", firm_id ])]

* Added CSV format for fixtures #272 [what-a-day]. (See the new and expanded documentation on fixtures for more information)

* Fixed fixtures using primary key fields called something else than "id" [dave]

* Added proper handling of time fields that are turned into Time objects with the dummy date of 2000/1/1 [HariSeldon]

* Added reverse order of deleting fixtures, so referential keys can be maintained #247 [Tim Bates]

* Added relative path search for sqlite dbfiles in database.yml (if RAILS_ROOT is defined) #233 [bitsweat]

* Added option to establish_connection where you'll be able to leave out the parameter to have it use the RAILS_ENV environment variable

* Added ADO-based SQLServerAdapter (only works on Windows) [Joey Gibson]

* Fixed problems with primary keys and postgresql sequences (#230) [Tim Bates]

* Fixed problems with nested transactions (#231) [Tim Bates]

* Added reloading for associations under cached environments like FastCGI and mod_ruby. This makes it possible to use those environments for development.
  This is turned on by default, but can be turned off with ActiveRecord::Base.reload_dependencies = false in production environments.

  NOTE: This will only have an effect if you let the associations manage the requiring of model classes. All libraries loaded through
  require will be "forever" cached. You can, however, use ActiveRecord::Base.load_or_require("library") to get this behavior outside of the
  auto-loading associations.
